--- a/billetterie.html
+++ b/billetterie.html
@@ -1,126 +1,126 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>HIT THE ROAD 2020 - billetterie</title>
-		<meta name="description" content="Hit the Road, c’est une aventure musicale éco-responsable où les participants se rendent en autostop. C’est un évènement 100% associatif et à but non-lucratif. A l’affiche : voyages inattendus, concerts éclectiques, conférences inspirantes et délices bios et locaux !" />
-		<link rel="shortcut icon" type="image/png" href="favicon.png" />
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159396063-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-159396063-1');
-</script>
-	</head>
-	<body>
-		<main>
-			<div class="content content--fixed">
-				<header class="header">
-					<h1 class="header__title"><a href="index.html">HIT THE ROAD 2020</a></h1>
-					<h1 class="header__subtitle">30 mai - 1er juin</h1>
-					<h4 class="header__slogan">—  concerts & autostop  —</h4>
-				</header>
-			
-				<div class="menu">
-					<a href="billetterie.html"><h4 class="menu__title-selected">Billetterie</h4></a>
-					<a href="index.html#progra"><h4 class="menu__title">Programmation</h4></a>
-				</div>
-			</div>	
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>HIT THE ROAD 2020 - billetterie</title>
+    <meta name="description" content="Hit the Road, c’est une aventure musicale éco-responsable où les participants se rendent en autostop. C’est un évènement 100% associatif et à but non-lucratif. A l’affiche : voyages inattendus, concerts éclectiques, conférences inspirantes et délices bios et locaux !" />
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159396063-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
 
-			<div class="content-wrap-2" style="margin-top: 200px;">
-				<div class="content content--layout content--layout-5">
-					<h3 class="content__title">Tickets 3 jours</h3>
-					<p class="content__desc">Le ticket 3 jours est valable du samedi 30 Mai au lundi 1er Juin. Ce ticket coûte 33 euros en early birds et 38 euros pour les moins rapides.
-					<br><br>
-					<b>En plus de l’accès au festival, les tickets 3 jours comprennent :</b>
-						<ul class="content__list">
-							<li>l’accès gratuit aux concerts et conférences</li>
-							<li>l’accès gratuit au camping du samedi 11h au lundi 11h </li>
-							<li>l’accès gratuit aux activités</li>
-							<li>l’accès gratuit aux douches et toilettes sèches</li>
-							<li>les deux brunchs du dimanche et du lundi</li>
-							<li>l’organisation des départs en stop</li>
-							<li>le kit du parfait autostoppeur</li>
-							<li>l’assistance de la voiture balai si nécessaire</li>
-						</ul>
-					</p>
-					<a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" target="blank">Réserver maintenant</a>
-				</div>
-			</div>
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-			<div class="content-wrap-2">
-				<div class="content content--layout content--layout-5">
-					<h3 class="content__title">Tickets 1 jour</h3>
-					<p class="content__desc">Le ticket 1 jours est valable pour le jour choisi uniquement :
-					<br><br><u>Ticket 1 jour samedi</u> - Accès au festival du samedi 11h au dimanche 11h.
-					<br><u>Ticket 1 jour dimanche</u> - Accès au festival du dimanche 11h au lundi 11h.
-					<br><br>Ce ticket coûte 17 euros en early birds et 19 euros pour les moins rapides. 
+    gtag('config', 'UA-159396063-1');
+    </script>
+</head>
 
-					<br><br>
-					<b>En plus de l’accès au festival, les tickets 1 jour comprennent :</b>
-						<ul class="content__list">
-							<li>l’accès gratuit aux concerts et conférences pour le jour choisi uniquement</li>
-							<li>l’accès gratuit au camping pour le jour choisi uniquement</li>
-							<li>l’accès gratuit aux activités</li>
-							<li>l’accès gratuit aux douches et toilettes sèches</li>
-							<li>un brunch</li>
-							<li>l’organisation des départs en stop</li>
-							<li>le kit du parfait autostoppeur</li>
-							<li>l’assistance de la voiture balai si nécessaire</li>
-						</ul>
-					</p>
-					<a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" target="blank">Réserver maintenant</a>
-				</div>
-			</div>
+<body>
+    <main>
+        <div class="content content--fixed">
+            <header class="header">
+                <h1 class="header__title"><a href="index.html">HIT THE ROAD 2020</a></h1>
+                <h1 class="header__subtitle">30 mai - 1er juin</h1>
+                <h4 class="header__slogan">— concerts & autostop —</h4>
+            </header>
+            <div class="menu">
+                <a href="billetterie.html">
+                    <h4 class="menu__title-selected">Billetterie</h4>
+                </a>
+                <a href="index.html#progra">
+                    <h4 class="menu__title">Programmation</h4>
+                </a>
+            </div>
+        </div>
+        <div class="content-wrap-2" style="margin-top: 200px;">
+            <div class="content content--layout content--layout-5">
+                <h3 class="content__title">Tickets 3 jours</h3>
+                <p class="content__desc">Le ticket 3 jours est valable du samedi 30 Mai au lundi 1er Juin. Ce ticket coûte 33 euros en early birds et 38 euros pour les moins rapides.
+                    <br><br>
+                    <b>En plus de l’accès au festival, les tickets 3 jours comprennent :</b>
+                    <ul class="content__list">
+                        <li>l’accès gratuit aux concerts et conférences</li>
+                        <li>l’accès gratuit au camping du samedi 11h au lundi 11h </li>
+                        <li>l’accès gratuit aux activités</li>
+                        <li>l’accès gratuit aux douches et toilettes sèches</li>
+                        <li>les deux brunchs du dimanche et du lundi</li>
+                        <li>l’organisation des départs en stop</li>
+                        <li>le kit du parfait autostoppeur</li>
+                        <li>l’assistance de la voiture balai si nécessaire</li>
+                    </ul>
+                </p>
+                <a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" target="blank">Réserver maintenant</a>
+            </div>
+        </div>
+        <div class="content-wrap-2">
+            <div class="content content--layout content--layout-5">
+                <h3 class="content__title">Tickets 1 jour</h3>
+                <p class="content__desc">Le ticket 1 jours est valable pour le jour choisi uniquement :
+                    <br><br><u>Ticket 1 jour samedi</u> - Accès au festival du samedi 11h au dimanche 11h.
+                    <br><u>Ticket 1 jour dimanche</u> - Accès au festival du dimanche 11h au lundi 11h.
+                    <br><br>Ce ticket coûte 17 euros en early birds et 19 euros pour les moins rapides.
+                    <br><br>
+                    <b>En plus de l’accès au festival, les tickets 1 jour comprennent :</b>
+                    <ul class="content__list">
+                        <li>l’accès gratuit aux concerts et conférences pour le jour choisi uniquement</li>
+                        <li>l’accès gratuit au camping pour le jour choisi uniquement</li>
+                        <li>l’accès gratuit aux activités</li>
+                        <li>l’accès gratuit aux douches et toilettes sèches</li>
+                        <li>un brunch</li>
+                        <li>l’organisation des départs en stop</li>
+                        <li>le kit du parfait autostoppeur</li>
+                        <li>l’assistance de la voiture balai si nécessaire</li>
+                    </ul>
+                </p>
+                <a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" target="blank">Réserver maintenant</a>
+            </div>
+        </div>
+        <div class="content-wrap-2">
+            <div class="content content--layout content--layout-5">
+                <h3 class="content__title">Tickets 1 soirée</h3>
+                <p class="content__desc">Le ticket 1 soirée est valable pour la soirée choisie uniquement :
+                    <br><br><u>Ticket 1 soirée samedi</u> - Accès au festival du samedi 18h au dimanche 2h.
+                    <br><u>Ticket 1 soirée dimanche</u> - Accès au festival du dimanche 18h au lundi 2h.
+                    <br><br>Ce ticket coûte 13 euros.
+                    <br><br>
+                    <b>En plus de l’accès au festival, les tickets 1 soirée comprennent :</b>
+                    <ul class="content__list">
+                        <li>l’accès gratuit aux concerts pour le soir choisi uniquement</li>
+                        <li>l’accès gratuit aux toilettes sèches</li>
+                    </ul>
+                </p>
+                <a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" target="blank">Réserver maintenant</a>
+            </div>
+        </div>
+        <div class="footer__container">
+            <div class="footer__container-contact">
+                <h2>Contact</h2>
+                <a href="mailto:festival.hittheroad@gmail.com">festival.hittheroad@gmail.com</a>
+                <a href="https://m.me/festivalhittheroad" target="blank">messenger</a>
+                <a href="https://www.facebook.com/festivalhittheroad" target="blank">facebook</a>
+                <a href="https://www.instagram.com/festivalhittheroad/" target="blank">instagram</a>
+            </div>
+            <div class="footer__container-partenaires">
+                <h2>Partenaires</h2>
+                <a href="http://www.crous-paris.fr/" target="blank"><img src="img/sponsors/crous.png"></a>
+                <a href="https://assopaves.org/cafes" target="blank"><img src="img/sponsors/cafes.png"></a>
+                <a href="https://stopandgosp.wixsite.com/" target="blank"><img src="img/sponsors/stop_and_go.png"></a>
+                <a href="https://www.pissedebout.fr/" target="blank"><img src="img/sponsors/pisse_debout.png"></a>
+                <a href="https://assopaves.org/" target="blank"><img src="img/sponsors/paves.png"></a>
+            </div>
+        </div>
+    </main>
+    <script src="js/imagesloaded.pkgd.min.js"></script>
+    <script src="js/anime.min.js"></script>
+    <script src="js/scrollMonitor.js"></script>
+    <script src="js/demo1.js"></script>
+</body>
 
-			<div class="content-wrap-2">
-				<div class="content content--layout content--layout-5">
-					<h3 class="content__title">Tickets 1 soirée</h3>
-					<p class="content__desc">Le ticket 1 soirée est valable pour la soirée choisie uniquement :
-					<br><br><u>Ticket 1 soirée samedi</u> - Accès au festival du samedi 18h au dimanche 2h.
-					<br><u>Ticket 1 soirée dimanche</u> - Accès au festival du dimanche 18h au lundi 2h.
-					<br><br>Ce ticket coûte 13 euros.  
-
-					<br><br>
-					<b>En plus de l’accès au festival, les tickets 1 soirée comprennent :</b>
-						<ul class="content__list">
-							<li>l’accès gratuit aux concerts pour le soir choisi uniquement</li>
-							<li>l’accès gratuit aux toilettes sèches</li>
-						</ul>
-					</p>
-					<a class="content__rsv" href="https://www.helloasso.com/associations/stop-and-go/evenements/hit-the-road-2020" target="blank">Réserver maintenant</a>
-				</div>
-			</div>
-
-			<div class="footer__container">
-				<div class="footer__container-contact">
-					<h2>Contact</h2>
-					<a href="mailto:festival.hittheroad@gmail.com">festival.hittheroad@gmail.com</a>
-					<a href="https://m.me/festivalhittheroad" target="blank">messenger</a>
-					<a href="https://www.facebook.com/festivalhittheroad" target="blank">facebook</a>
-					<a href="https://www.instagram.com/festivalhittheroad/" target="blank">instagram</a>
-				</div>
-				<div class="footer__container-partenaires">
-					<h2>Partenaires</h2>
-					<a href="http://www.crous-paris.fr/" target="blank"><img src="img/sponsors/crous.png"></a>
-					<a href="https://assopaves.org/cafes" target="blank"><img src="img/sponsors/cafes.png"></a>
-					<a href="https://stopandgosp.wixsite.com/" target="blank"><img src="img/sponsors/stop_and_go.png"></a>
-					<a href="https://www.pissedebout.fr/" target="blank"><img src="img/sponsors/pisse_debout.png"></a>
-					<a href="https://assopaves.org/" target="blank"><img src="img/sponsors/paves.png"></a>
-				</div>	
-			</div>			
-
-		</main>
-		<script src="js/imagesloaded.pkgd.min.js"></script>
-		<script src="js/anime.min.js"></script>
-		<script src="js/scrollMonitor.js"></script>
-		<script src="js/demo1.js"></script>
-	</body>
 </html>
