--- a/voilaaa-soundsystem.html
+++ b/voilaaa-soundsystem.html
@@ -1,76 +1,83 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>HIT THE ROAD 2020 - Voilaaa Soundsystem</title>
-		<meta name="description" content="Hit the Road, c’est une aventure musicale éco-responsable où les participants se rendent en autostop. C’est un évènement 100% associatif et à but non-lucratif. A l’affiche : voyages inattendus, concerts éclectiques, conférences inspirantes et délices bios et locaux !" />
-		<link rel="shortcut icon" type="image/png" href="favicon.png" />
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159396063-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-159396063-1');
-</script>
-	</head>
-	<body>
-		<main>
-			<div class="content content--fixed">
-				<header class="header">
-					<h1 class="header__title"><a href="index.html">HIT THE ROAD 2020</a></h1>
-					<h1 class="header__subtitle">30 mai - 1er juin</h1>
-					<h4 class="header__slogan">—  concerts & autostop  —</h4>
-				</header>
-			
-				<div class="menu">
-					<a href="billetterie.html"><h4 class="menu__title">Billetterie</h4></a>
-					<a href="index.html#progra"><h4 class="menu__title">Programmation</h4></a>
-				</div>
-			</div>
-			<div class="content-wrap-2" style="margin-top: 200px;">
-				<div class="content content--layout content--layout-6">
-					<h3 class="content__title">Voilaaa Soundsystem</h3>
-					<p class="content__desc">
-					Dimanche @ 23h30<br><br>
-					Le lyonnais Bruno “Patchworks” Hovart est un producteur hyperactif qui ne s’accroche ni à un style musical, ni à un alias. 
-					Il a dévoilé en 2015 VOILAAA, projet afro-disco sur le label Favorite Recordings. Groovy, son album “On te l’avait dit” sonne comme un hymne aux plus belles années de la disco, nous replongeant au cœur des années 1970 de Lagos ou Abidjan. VOILAAA Sound System, c’est le collectif qui l’entoure pour des sets sound system furieux, afro, disco et moites, inspirés de l’esprit “Notting Hill”.
-					<br><br>
-					<a href="https://www.facebook.com/voilaaamusic/" target="blank">Facebook</a><br>
-					<a href="https://www.instagram.com/voilaaa_sound_system/" target="blank">Instagram</a><br>
-					</p>
-					<img class="content__image" src="img/groupes/voilaaa-soundsystem-L.jpg" style="padding-top: 60px">
-					<div class="youtube" style="margin-top: 60px">
-    					<iframe width="560" height="315" src="https://www.youtube.com/embed/qXwZAYNfEIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-			<div class="footer__container">
-				<div class="footer__container-contact">
-					<h2>Contact</h2>
-					<a href="mailto:festival.hittheroad@gmail.com">festival.hittheroad@gmail.com</a>
-					<a href="https://m.me/festivalhittheroad" target="blank">messenger</a>
-					<a href="https://www.facebook.com/festivalhittheroad" target="blank">facebook</a>
-					<a href="https://www.instagram.com/festivalhittheroad/" target="blank">instagram</a>
-				</div>
-				<div class="footer__container-partenaires">
-					<h2>Partenaires</h2>
-					<a href="http://www.crous-paris.fr/" target="blank"><img src="img/sponsors/crous.png"></a>
-					<a href="https://assopaves.org/cafes" target="blank"><img src="img/sponsors/cafes.png"></a>
-					<a href="https://stopandgosp.wixsite.com/" target="blank"><img src="img/sponsors/stop_and_go.png"></a>
-					<a href="https://www.pissedebout.fr/" target="blank"><img src="img/sponsors/pisse_debout.png"></a>
-					<a href="https://assopaves.org/" target="blank"><img src="img/sponsors/paves.png"></a>
-				</div>	
-			</div>		
-		</main>
-		<script src="js/imagesloaded.pkgd.min.js"></script>
-		<script src="js/anime.min.js"></script>
-		<script src="js/scrollMonitor.js"></script>
-		<script src="js/demo1.js"></script>
-	</body>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>HIT THE ROAD 2020 - Voilaaa Soundsystem</title>
+    <meta name="description" content="Hit the Road, c’est une aventure musicale éco-responsable où les participants se rendent en autostop. C’est un évènement 100% associatif et à but non-lucratif. A l’affiche : voyages inattendus, concerts éclectiques, conférences inspirantes et délices bios et locaux !" />
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159396063-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-159396063-1');
+    </script>
+</head>
+
+<body>
+    <main>
+        <div class="content content--fixed">
+            <header class="header">
+                <h1 class="header__title"><a href="index.html">HIT THE ROAD 2020</a></h1>
+                <h1 class="header__subtitle">30 mai - 1er juin</h1>
+                <h4 class="header__slogan">— concerts & autostop —</h4>
+            </header>
+            <div class="menu">
+                <a href="billetterie.html">
+                    <h4 class="menu__title">Billetterie</h4>
+                </a>
+                <a href="index.html#progra">
+                    <h4 class="menu__title">Programmation</h4>
+                </a>
+            </div>
+        </div>
+        <div class="content-wrap-2" style="margin-top: 200px;">
+            <div class="content content--layout content--layout-6">
+                <h3 class="content__title">Voilaaa Soundsystem</h3>
+                <p class="content__desc">
+                    Dimanche @ 23h30<br><br>
+                    Le lyonnais Bruno “Patchworks” Hovart est un producteur hyperactif qui ne s’accroche ni à un style musical, ni à un alias.
+                    Il a dévoilé en 2015 VOILAAA, projet afro-disco sur le label Favorite Recordings. Groovy, son album “On te l’avait dit” sonne comme un hymne aux plus belles années de la disco, nous replongeant au cœur des années 1970 de Lagos ou Abidjan. VOILAAA Sound System, c’est le collectif qui l’entoure pour des sets sound system furieux, afro, disco et moites, inspirés de l’esprit “Notting Hill”.
+                    <br><br>
+                    <a href="https://www.facebook.com/voilaaamusic/" target="blank">Facebook</a><br>
+                    <a href="https://www.instagram.com/voilaaa_sound_system/" target="blank">Instagram</a><br>
+                </p>
+                <img class="content__image" src="img/groupes/voilaaa-soundsystem-L.jpg" style="padding-top: 60px">
+                <div class="youtube" style="margin-top: 60px">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qXwZAYNfEIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="footer__container">
+            <div class="footer__container-contact">
+                <h2>Contact</h2>
+                <a href="mailto:festival.hittheroad@gmail.com">festival.hittheroad@gmail.com</a>
+                <a href="https://m.me/festivalhittheroad" target="blank">messenger</a>
+                <a href="https://www.facebook.com/festivalhittheroad" target="blank">facebook</a>
+                <a href="https://www.instagram.com/festivalhittheroad/" target="blank">instagram</a>
+            </div>
+            <div class="footer__container-partenaires">
+                <h2>Partenaires</h2>
+                <a href="http://www.crous-paris.fr/" target="blank"><img src="img/sponsors/crous.png"></a>
+                <a href="https://assopaves.org/cafes" target="blank"><img src="img/sponsors/cafes.png"></a>
+                <a href="https://stopandgosp.wixsite.com/" target="blank"><img src="img/sponsors/stop_and_go.png"></a>
+                <a href="https://www.pissedebout.fr/" target="blank"><img src="img/sponsors/pisse_debout.png"></a>
+                <a href="https://assopaves.org/" target="blank"><img src="img/sponsors/paves.png"></a>
+            </div>
+        </div>
+    </main>
+    <script src="js/imagesloaded.pkgd.min.js"></script>
+    <script src="js/anime.min.js"></script>
+    <script src="js/scrollMonitor.js"></script>
+    <script src="js/demo1.js"></script>
+</body>
+
 </html>
